# fsd-agente-relatoria

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  pyproject.toml
backend/: README.md  __init__.py  app.py
backend/core/: __init__.py  config.py  logging.py  security.py
backend/http/: __init__.py  dependencies.py  router.py
backend/http/routes/: admin.py  auth.py  jobs.py  resources.py  system.py
backend/infra/: __init__.py  clients.py
backend/modules/: __init__.py
backend/modules/admin/: __init__.py  models.py  repository.py  service.py
backend/modules/jobs/: __init__.py  dispatcher.py  models.py  repository.py  service.py  worker.py
backend/modules/notifications/: __init__.py  service.py
backend/modules/resources/: __init__.py  models.py  repository.py  service.py
backend/scripts/: bootstrap_cosmos.py
backend/workers/: __init__.py  run_job_worker.py
docs/: backend_jobs_deploy.md  segmentation_agent_flow.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  api.ts  styles.css
infra/scripts/: create_entra_app_registration.sh
infra/tofu/azure-backend/: README.md  dev.tfvars.example  locals.tf  main.tf  outputs.tf  (+2 more)
src/audio_tools/: prepare_audio.py
tests/: export_compras_acta_graph.py  export_compras_approval_memo_graph.py  export_juridica_acta_graph.py  export_segmentation_graph.py  run_iterative_segmentation_agent.py  run_video1083416983_pipeline.py  test_backend_admin_api.py  test_backend_app.py  test_backend_job_worker.py  test_backend_jobs_api.py  test_backend_notifications.py  test_backend_resources_api.py  test_markitdown_powerpoint.py  test_segmentation_agent.py  test_unified_pipeline.py
(+85 files in other folders)
